--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+butter (0.5-1) stable; urgency=low
+  [ Da_Blitz ]
+  * Added splice() syscall
+ 
+ -- Da_Blitz <code@pocketnix.org>  Tue, 11 Mar 2014 02:11:43 +1000
+
 butter (0.4-1) stable; urgency=low
   [ Da_Blitz ]
   * Refactor fanotify
@@ -5,7 +11,7 @@ butter (0.4-1) stable; urgency=low
   * Provide fanotify.str_to_events()
   * Provide inotify.str_to_events()
   * Add int to signal name mapping for inotify
-
+ 
  -- Da_Blitz <code@pocketnix.org>  Sun, 12 Dec 2013 11:10:43 +1000
 
 butter (0.3-1) stable; urgency=low
