--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
 butter (0.5-1) stable; urgency=low
   [ Da_Blitz ]
   * splice syscall documentation
+  * add tee() syscall
+  * add tee() example
  
  -- Da_Blitz <code@pocketnix.org>  Tue, 11 Mar 2014 02:11:43 +1000
 
