--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,12 @@
-butter (0.5-1) stable; urgency=low
+butter (0.6-1) stable; urgency=low
   [ Da_Blitz ]
   * splice syscall documentation
   * add tee() syscall
   * add tee() example
+  * add vmsplice() syscall
+  * add vmsplice() example
  
- -- Da_Blitz <code@pocketnix.org>  Tue, 11 Mar 2014 02:11:43 +1000
+ -- Da_Blitz <code@pocketnix.org>  Tue, 12 Mar 2014 23:26:43 +1000
 
 butter (0.5-1) stable; urgency=low
   [ Da_Blitz ]
