--- a/README
+++ b/README
@@ -14,6 +14,13 @@ Whats Available
  * splice
  * tee
  * vmsplice
+ * gethostname
+ * sethostname
+ * mount
+ * umount
+ * pivot_root
+ * getpid (bypasses glibc caching)
+ * getppid (bypasses glibc caching)
 
 Whats Coming
 -------------
