--- a/README
+++ b/README
@@ -33,6 +33,17 @@ to use cffi for speed and compatibility with pypy
  * posix/linux aio (scatter/gather read writes with a completion based API 
    instead of a 'ready' based interface, eg similar to IOCP on windows)
 
+Supported Python
+-----------------
+Butter currently supported the following python interpreters
+
+* pypy (2.7 and 3.2 python implementations)
+* cpython 3.x
+* cpython 2.7
+
+Butter may work on older versions however it has not been tested on anything 
+except the above interpreters and may break without warning
+
 Design
 -------
 The 'fd' apis have been designed first as thin wrappers around the underlying
