--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,7 @@ butter (0.8-1) stable; urgency=low
   * Added friendly properties to inotify event object
   * Added friendly properties to fanotify event object
   * FanotifyEvents now use less memory
+  * AsyncIO support for inotify on supported platforms
    
  -- Da_Blitz <code@pocketnix.org>  Tue, 16 Mar 2014 22:04:43 +1000
 
