--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@ butter (0.8-1) stable; urgency=low
   * Added friendly properties to fanotify event object
   * FanotifyEvents now use less memory
   * AsyncIO support for inotify on supported platforms
+  * AsyncIO support for fanotify on supported platforms
    
  -- Da_Blitz <code@pocketnix.org>  Tue, 16 Mar 2014 22:04:43 +1000
 
