--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+butter (0.9-1) stable; urgency=low
+  [ Da_Blitz ]
+  * Add eventfd support
+  * Add eventfd asyncio support
+   
+ -- Da_Blitz <code@pocketnix.org>  Tue, 17 May 2014 01:10:43 +1000
+
 butter (0.8-1) stable; urgency=low
   [ Da_Blitz ]
   * Now works with python3.4 and higher
