Update syscall status

--- a/README
+++ b/README
@@ -21,6 +21,7 @@ Whats Available
  * pivot_root
  * getpid (bypasses glibc caching)
  * getppid (bypasses glibc caching)
+ * eventfd (includes asyncio support)
 
 Whats Coming
 -------------
@@ -28,7 +29,6 @@ Most of these exist in v0.2 as ctypes code. these are currently being rewritten
 to use cffi for speed and compatibility with pypy
 
  * signalfd
- * eventfd
  * timerfd
  * posix/linux aio (scatter/gather read writes with a completion based API 
    instead of a 'ready' based interface, eg similar to IOCP on windows)
