Update README and CHANGELOG

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,8 @@ butter (0.9-1) stable; urgency=low
   * asyncio objects now have a close() method
   * eventfd now has a close() method
   * eventfd now has a fileno() method
+  * Add timerfd support
+  * Add timerfd asyncio support
    
  -- Da_Blitz <code@pocketnix.org>  Tue, 17 May 2014 01:10:43 +1000
 
