--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,8 @@ butter (0.9-1) stable; urgency=low
   * eventfd now has a fileno() method
   * Add timerfd support
   * Add timerfd asyncio support
+  * Fixed issue with circular imports preventing python3.4 from working
+  * Fixed issue with python2.7 returning floats where python3 returned ints
    
  -- Da_Blitz <code@pocketnix.org>  Tue, 17 May 2014 01:10:43 +1000
 
