--- a/README
+++ b/README
@@ -23,13 +23,14 @@ Whats Available
  * getppid (bypasses glibc caching)
  * eventfd (includes asyncio support)
  * timerfd (includes asyncio support)
+ * pthread_sigmask (Avalible in python3.x but backported for python2.7)
+ * signalfd (includes asyncio support)
 
 Whats Coming
 -------------
 Most of these exist in v0.2 as ctypes code. these are currently being rewritten
 to use cffi for speed and compatibility with pypy
 
- * signalfd
  * posix/linux aio (scatter/gather read writes with a completion based API 
    instead of a 'ready' based interface, eg similar to IOCP on windows)
 
